--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -27,10 +27,24 @@
         />
 
     <TextView
-        android:id="@+id/txt_city"
+        android:id="@+id/txt_tip_closest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txt_tip_directions"
+        android:layout_marginBottom="10dp"
+        tools:text="Closest defibrillator"
+        android:text="@string/tip_closest"
+        fontPath="fonts/Roboto-Bold.ttf"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/txt_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt_tip_closest"
         android:textSize="16sp"
         tools:text="City"
         />
