--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -10,77 +10,94 @@
     android:paddingBottom="@dimen/info_window_padding"
     android:paddingTop="@dimen/info_window_padding_top">
 
-    <TextView
-        android:id="@+id/txt_tip_directions"
+    <LinearLayout
+        android:id="@+id/info_window_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginBottom="10dp"
-        tools:text="Tap here to show directions"
-        android:text="@string/tip_directions"
-        fontPath="fonts/Roboto-Bold.ttf"
-        android:textStyle="bold"
-        android:textColor="@color/primary"
-        android:drawableLeft="@drawable/ic_info_outline_green500_24dp"
-        android:drawablePadding="10dp"
-        android:visibility="gone"
-        />
+        android:orientation="vertical"
+        >
 
-    <TextView
-        android:id="@+id/txt_tip_closest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_tip_directions"
-        android:layout_marginBottom="10dp"
-        tools:text="Closest defibrillator"
-        android:text="@string/tip_closest"
-        fontPath="fonts/Roboto-Bold.ttf"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:visibility="gone"
-        />
+        <TextView
+            android:id="@+id/txt_tip_directions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginBottom="10dp"
+            tools:text="Tap here to show directions"
+            android:text="@string/tip_directions"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:textStyle="bold"
+            android:textColor="@color/primary"
+            android:drawableLeft="@drawable/ic_info_outline_green500_24dp"
+            android:drawablePadding="10dp"
+            android:visibility="gone"
+            />
 
-    <TextView
-        android:id="@+id/txt_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_tip_closest"
-        android:textSize="16sp"
-        tools:text="City"
-        />
+        <TextView
+            android:id="@+id/txt_tip_closest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            tools:text="Closest defibrillator"
+            android:text="@string/tip_closest"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:visibility="gone"
+            />
 
-    <View
-        android:id="@+id/divider"
-        style="@style/Divider"
-        android:layout_below="@id/txt_city"/>
+        <TextView
+            android:id="@+id/txt_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="City"
+            />
 
-    <TextView
-        android:id="@+id/txt_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/divider"
-        android:paddingRight="40dp"
-        android:paddingEnd="40dp"
-        fontPath="fonts/Roboto-Bold.ttf"
-        android:textSize="16sp"
-        tools:text="The description of defib location"
-        />
+        <View
+            android:id="@+id/divider"
+            style="@style/Divider"
+            />
 
-    <TextView
-        android:id="@+id/txt_environment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_description"
-        tools:text="Environment"
-        />
+        <TextView
+            android:id="@+id/txt_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="40dp"
+            android:paddingEnd="40dp"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:textSize="16sp"
+            tools:text="The description of defib location"
+            />
+
+        <TextView
+            android:id="@+id/txt_environment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Environment"
+            />
+
+        <TextView
+            android:id="@+id/txt_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:textSize="16sp"
+            tools:text="Distance"
+            android:drawableLeft="@drawable/ic_directions_grey600_24dp"
+            android:drawablePadding="10dp"
+            />
+   </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_directions_grey600_24dp"
+        android:src="@drawable/ic_directions_walk_grey600_24dp"
         android:contentDescription="@string/directions"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@id/txt_environment"/>
+        android:layout_alignBottom="@id/info_window_text"
+        />
 
 </RelativeLayout>
