--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fabiendem.defib68.activities.MainActivity">
+    tools:context="com.fablap.defib.activities.MainActivity">
 
     <!-- Your normal content view -->
     <FrameLayout
