--- a/app/src/main/res/layout/fragment_in_case_emergency.xml
+++ b/app/src/main/res/layout/fragment_in_case_emergency.xml
@@ -19,6 +19,7 @@
             android:src="@drawable/ic_cpr_call"
             android:layout_marginRight="16dp"
             android:layout_centerVertical="true"
+            android:contentDescription="@string/emerg_call"
             />
         <TextView
             android:id="@+id/txt_call"
@@ -50,6 +51,7 @@
             android:layout_marginRight="16dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_cpr_mas"
+            android:contentDescription="@string/emerg_compress"
             />
         <TextView
             android:id="@+id/txt_compress"
@@ -80,6 +82,7 @@
             android:layout_marginRight="16dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_cpr_defib"
+            android:contentDescription="@string/emerg_defib"
             />
         <TextView
             android:id="@+id/txt_defib"
